Add missing github.com/rs/cors in Travis CI [wip]
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - go get -u github.com/jgautheron/usedexports
   - go get -u github.com/kisielk/errcheck
   - go get -u github.com/olivere/elastic
+  - go get -u github.com/rs/cors
 #  - go get -u github.com/google/go-github/github
 #  - go get -u github.com/lib/pq
 #  - go get -u golang.org/x/oauth2
