--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@ go:
 before_install:
   - go get -u golang.org/x/lint/golint
   - go get -u golang.org/x/tools/cmd/goimports
-  - go get -u github.com/jgautheron/goconst/cmd/goconst
   - go get -u github.com/jgautheron/usedexports
   - go get -u github.com/kisielk/errcheck
   - go get -u github.com/olivere/elastic
   - go get -u github.com/rs/cors
   - go get -u github.com/json-iterator/go
   - go get -u github.com/google/go-github/github
+#  - go get -u github.com/jgautheron/goconst/cmd/goconst
 #  - go get -u github.com/lib/pq
 #  - go get -u golang.org/x/oauth2
 #  - go get -u golang.org/x/text/transform
