--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ sqlite/*.sql
 /report_alltime.txt
 *.secret
 /error.yaml
+/in.json
 !/contributors_and_emails.csv
 !/contributing_actors*.csv
 !/k8s_contributors_and_emails.csv
