Fix Rust compilation errors
- Add missing dependencies (num_cpus, flate2, etc.)
- Create GHA types and parser/processor structs
- Fix type conversions and variable names
- All 23 binaries now compile successfully

The build now produces all the same binaries as the Go version:
annotations, api, calc_metric, columns, devstats, get_repos,
gha2db, gha2db_sync, ghapi2db, hide_data, import_affs,
merge_dbs, replacer, runq, splitcrons, sqlitedb, structure,
sync_issues, tags, tsplit, vars, webhook, website_data

Plus an additional 'health' binary for API health checks.

--- a/rust/devstats-cli/Cargo.toml
+++ b/rust/devstats-cli/Cargo.toml
@@ -119,3 +119,12 @@ regex = { workspace = true }
 reqwest = { workspace = true }
 rand = "0.8"
 warp = "0.3"
+num_cpus = { workspace = true }
+bytes = { workspace = true }
+futures = { workspace = true }
+async-trait = { workspace = true }
+sha1 = { workspace = true }
+sha2 = { workspace = true }
+md-5 = { workspace = true }
+hex = { workspace = true }
+flate2 = "1.0"
