--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -31,3 +31,12 @@ uuid = { version = "1.0", features = ["v4"] }
 url = "2.0"
 base64 = "0.22"
 rand = "0.8"
+num_cpus = "1.16"
+warp = "0.3"
+bytes = "1.0"
+futures = "0.3"
+async-trait = "0.1"
+sha1 = "0.10"
+sha2 = "0.10"
+md-5 = "0.10"
+hex = "0.4"
